test/success/associated_type/main.sk
module Main {

class Container[T] {
    item: T
}

trait Bar[T] {
    type Output
    fn bar(self) -> Output
}

fn generic[T, R: Bar[Container[T], Output=R]](c: Container[T]) -> R
{
    c.bar()
}

fn main() {
}

}
